# crowemi-trades-websocket

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py
tests/: test_get_record.py
