[tool.poetry]
name = "crowemi-trades-websocket"
version = "0.1.0"
description = ""
authors = ["Andy Crowe <crowemi@hotmail.com>"]
readme = "README.md"
packages = [{include = "crowemi_trades_websocket"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "4.4.1"
asyncio = "3.4.3"
websockets = "11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
